--- a/OJS.Workers.ExecutionStrategies/packages.config
+++ b/OJS.Workers.ExecutionStrategies/packages.config
@@ -7,6 +7,11 @@
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net47" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" userInstalled="true" />
+  <package id="Serilog" version="2.5.0" targetFramework="net47" />
+  <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net47" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net47" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net47" />
+  <package id="Serilog.Sinks.Seq" version="4.0.0" targetFramework="net47" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net45" developmentDependency="true" />
 </packages>
