--- a/OJS.Workers.Executors/packages.config
+++ b/OJS.Workers.Executors/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net45" />
+  <package id="Serilog" version="2.5.0" targetFramework="net47" />
+  <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net47" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net47" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net47" />
+  <package id="Serilog.Sinks.Seq" version="4.0.0" targetFramework="net47" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net45" developmentDependency="true" />
 </packages>
