Added SignalR to OJS.Workers/LocalWorkerServiceBase.cs and refactored some other classes. This change allows the LocalWorker to notify Ojs.Web and end users of submission's progress i.e. when a submission has been checked LocalWorker will notify the hub that it has completed and user's interface will refresh submission's grid. Cool!

--- a/OJS.Workers/OJS.Workers.csproj
+++ b/OJS.Workers/OJS.Workers.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Services\OJS.Services\OJS.Services.csproj">
+      <Project>{44659A90-F81E-4007-8729-C37F4F650A81}</Project>
+      <Name>OJS.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OJS.Workers.Common\OJS.Workers.Common.csproj">
       <Project>{7F714D0B-CE81-4DD7-B6B2-62080FE22CD8}</Project>
       <Name>OJS.Workers.Common</Name>
@@ -76,6 +80,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
