--- a/OJS.Workers.SubmissionProcessors/packages.config
+++ b/OJS.Workers.SubmissionProcessors/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net47" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.4.0" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net47" />
   <package id="Serilog" version="2.5.0" targetFramework="net47" />
   <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net47" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net47" />
